# auto_localization

./: CMakeLists.txt  LICENSE  package.xml
config/: auto_localization.yaml
data/: pose.db
include/auto_localization/: AutoLocalization.hpp
launch/: auto_localization.launch.py
src/: AutoLocalization.cpp
