<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_localization</name>
  <version>0.0.0</version>
  <description>Auto localization package that localizes robot to last known location when restarted.</description>
  <maintainer email="athul@anscer.com">athul</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sqlite3</depend>
  <depend>tf2</depend>
<build_depend>libsqlite3-dev</build_depend>
<exec_depend>libsqlite3-dev</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
